Fix overflow and scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 html {
@@ -25,4 +25,18 @@ html {
 
 body {
   background-color: var(--deepNavy);
+}
+
+body::-webkit-scrollbar {
+  width: 1.2rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--lightGray);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--deepNavy);
+  border-radius: 2rem;
+  border: 0.3rem solid var(--lightGray);
 }
